Update defaults for Debian

--- a/defaults/repmgr.yml
+++ b/defaults/repmgr.yml
@@ -1,6 +1,7 @@
 # Required configuration items
 repmgr_target_group: ""
 repmgr_user: "repmgr"
+repmgr_password: "repmgr"
 repmgr_database: "repmgr"
 repmgr_conninfo: "host={{ansible_hostname}} user={{repmgr_user}} dbname={{repmgr_database}} connect_timeout=2"
 repmgr_data_directory: "{{postgresql_data_directory}}"
@@ -23,9 +24,10 @@ repmgr_location: "default"
 repmgr_use_replication_slots: "no"
 repmgr_witness_sync_interval: 15
 repmgr_use_primary_conninfo_password: "false"
-repmgr_passfile: "/var/lib/pgsql/.pgpass"
-repmgr_private_key_path: "/var/lib/pgsql/.ssh/id_rsa"
-repmgr_public_key_path: "/var/lib/pgsql/.ssh/id_rsa.pub"
+repmgr_passfile: "/var/lib/postgresql/{{postgresql_version}}/.pgpass"
+repmgr_base_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh"
+repmgr_private_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh/id_rsa"
+repmgr_public_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh/id_rsa.pub"
 repmgr_ssh_key_bits: "2048"
 repmgr_ssh_key_type: "rsa"
 
