Update to use external roles for prototyping

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-roles_path = ../
+roles_path = /home/vagrant:/home/vagrant/.roles
 allow_world_readable_tmpfiles = True
 
 remote_user = ansible
