--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -39,24 +39,24 @@
     state: directory
     owner: "{{ postgresql_service_user }}"
     group: "{{ postgresql_service_group }}"
-    mode: 0600
+    mode: 0700
 
-# - name: Repmgr | Generate ssh keypair for postgres user
-#   command: "ssh-keygen -b {{repmgr_ssh_key_bits}} -t {{repmgr_ssh_key_type}} -f {{repmgr_private_key_path}} -N ''"
-#   args:
-#     creates: "{{repmgr_private_key_path}}"
-#   become: yes
-#   become_user: "{{ postgresql_service_user }}"
-#   when: repmgr_primary
-
-- name: Repmgr | Generate ssh keypair for postgres user (Native module version)
-  openssh_keypair:
-    path: "{{repmgr_base_key_path}}/id_rsa"
-    size: 2048
-    owner: "{{ postgresql_service_user }}"
-    group: "{{ postgresql_service_group }}"
-    mode: 0600
+- name: Repmgr | Generate ssh keypair for postgres user
+  command: "ssh-keygen -b {{repmgr_ssh_key_bits}} -t {{repmgr_ssh_key_type}} -f {{repmgr_private_key_path}} -N ''"
+  args:
+    creates: "{{repmgr_private_key_path}}"
+  become: yes
+  become_user: "{{ postgresql_service_user }}"
   when: repmgr_primary
+
+# - name: Repmgr | Generate ssh keypair for postgres user (Native module version)
+#   openssh_keypair:
+#     path: "{{repmgr_base_key_path}}/id_rsa"
+#     size: 2048
+#     owner: "{{ postgresql_service_user }}"
+#     group: "{{ postgresql_service_group }}"
+#     mode: 0600
+#   when: repmgr_primary
 
 - name: Repmgr | Slurp ssh public key
   slurp:
@@ -104,11 +104,14 @@
   command: "{{postgresql_bin_directory}}/repmgr -f {{postgresql_conf_directory}}/repmgr.conf primary register"
   become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: repmgr_primary and not ansible_hostname in repmgr_cluster_show.stdout and not "primary" in repmgr_cluster_show.stdout
+  when:
+    - repmgr_primary and
+      not ansible_hostname in repmgr_cluster_show.stdout and
+      not "primary" in repmgr_cluster_show.stdout
 
 - name: Repmgr | Ensure postgresql slave is stopped before clone
   service:
-    name: "postgresql-{{postgresql_version}}"
+    name: "postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}"
     state: stopped
   when: not repmgr_primary and not ansible_hostname in repmgr_cluster_show.stdout and not "standby" in repmgr_cluster_show.stdout
 
