--- a/vars.yml
+++ b/vars.yml
@@ -1,8 +1,8 @@
 ---
-postgresql_version: 11
-postgresql_port: 5432
-
 # Basic settings
+postgresql_version: 11
+postgresql_cluster_name: main
+postgresql_port: 5432
 postgresql_encoding: "UTF-8"
 postgresql_locale: "fr_FR.UTF-8"
 postgresql_ctype: "fr_FR.UTF-8"
@@ -15,15 +15,18 @@ postgresql_max_replication_slots: 10
 postgresql_wal_keep_segments: 100
 postgresql_hot_standby: on
 postgresql_archive_mode: on
-postgresql_archive_command: "/bin/true"
+postgresql_archive_command: "test ! -f /tmp/%f && cp %p /tmp/%f"
+postgresql_ext_install_repmgr: yes
 postgresql_shared_preload_libraries:
   - repmgr
 
+# pg_hba.conf
 postgresql_pg_hba_custom:
   - { type: "host", database: "all", user: "all", address: "192.168.56.0/24", method: "md5" }
   - { type: "host", database: "replication", user: "repmgr", address: "192.168.56.0/24", method: "trust" }  
   - { type: "host", database: "replication", user: "repmgr", address: "127.0.0.1/32", method: "trust" }  
 
+# Databases
 postgresql_databases:
   - name: testdb
     owner: admin
@@ -32,6 +35,7 @@ postgresql_databases:
     owner: "{{repmgr_user}}"
     encoding: "UTF-8"
 
+# Users
 postgresql_users:
   - name: admin
     pass: secret # postgresql >=10 does not accept unencrypted passwords
@@ -39,6 +43,7 @@ postgresql_users:
   - name: "{{repmgr_user}}"
     pass: "{{repmgr_password}}"
 
+# Roles
 postgresql_user_privileges:
   - name: admin
     db: testdb
@@ -47,27 +52,21 @@ postgresql_user_privileges:
     priv: "ALL"
     role_attr_flags: "SUPERUSER,REPLICATION"
 
-# repmgr related variables
-postgresql_ext_install_repmgr: yes
-repmgr_target_group: "postgres_cluster"
-repmgr_target_group_hosts: "{{ groups[repmgr_target_group] }}"
-repmgr_master: "pgsql01"
+# Manage replication with repmgr (optional)
+# Repositories
+repmgr_gpg_key_url: "https://dl.2ndquadrant.com/gpg-key.asc"
+repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/release/apt {{ ansible_distribution_release }}-2ndquadrant main"
 
 # Required configuration items
+repmgr_target_group: "postgres_cluster"
+repmgr_target_group_hosts: "{{ groups[repmgr_target_group] }}"
 repmgr_user: "repmgr"
 repmgr_password: "repmgr"
 repmgr_database: "repmgr"
 repmgr_conninfo: "host={{ansible_hostname}} user={{repmgr_user}} dbname={{repmgr_database}} connect_timeout=2"
 repmgr_data_directory: "{{postgresql_data_directory}}"
 repmgr_version: "4.2"
-
-# Optional configuration items
-#
-
-# Repositories
-repmgr_gpg_key_url: "https://dl.2ndquadrant.com/gpg-key.asc"
-repmgr_baseurl: "https://dl.2ndquadrant.com/default/release/rpm/packages/centos/$releasever/$basearch/{{postgresql_version}}/"
-repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/release/apt {{ ansible_distribution_release }}-2ndquadrant main"
+repmgr_master: "pgsql01"
 
 # Replication
 repmgr_primary: False
@@ -78,7 +77,7 @@ repmgr_location: "default"
 repmgr_use_replication_slots: "no"
 repmgr_witness_sync_interval: 15
 repmgr_use_primary_conninfo_password: "false"
-repmgr_passfile: "/var/lib/postgresql/.pgpass" # /var/lib/postgresql is postgres' user homedir by default
+repmgr_passfile: "/var/lib/postgresql/.pgpass"
 repmgr_base_key_path: "/var/lib/postgresql/.ssh"
 repmgr_private_key_path: "/var/lib/postgresql/.ssh/id_rsa"
 repmgr_public_key_path: "/var/lib/postgresql/.ssh/id_rsa.pub"
@@ -142,12 +141,11 @@ repmgr_async_query_timeout: 60
 repmgr_keep_history_days: 14
 
 # Service commands
-# repmgr_service_start_command :  "sudo pg_ctlcluster {{postgresql_version}} main start" # Debian-specific version
-repmgr_service_start_command :  "sudo systemctl start postgresql-{{postgresql_version}}"
-repmgr_service_stop_command :  "sudo systemctl stop postgresql-{{postgresql_version}}"
-repmgr_service_restart_command :  "sudo systemctl restart postgresql-{{postgresql_version}}"
-repmgr_service_reload_command :  "sudo systemctl reload postgresql-{{postgresql_version}}"
-repmgr_service_promote_command :  ""
+repmgr_service_start_command: "sudo pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} start"
+repmgr_service_stop_command: "sudo pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} stop"
+repmgr_service_restart_command: "sudo pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} restart"
+repmgr_service_reload_command: "sudo pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} reload"
+repmgr_service_promote_command: ""
 
 # Warning levels
 repmgr_archive_ready_warning: 16
