--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -133,6 +133,8 @@
     group: "{{ postgresql_service_group }}"
     mode: 0640
   register: postgresql_configuration_pt1
+  notify: restart postgresql
+  changed_when: true
 
 - name: PostgreSQL | Update configuration - pt. 2 (postgresql.conf)
   template:
