Fix missing apt vars

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -802,3 +802,6 @@ postgresql_apt_key_url: "https://www.postgresql.org/media/keys/ACCC4CF8.asc"
 postgresql_apt_repository: "deb http://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main {{ postgresql_version }}"
 # Pin-Priority of PGDG repository
 postgresql_apt_pin_priority: 500
+postgresql_apt_py3_dependencies: ["python3-psycopg2", "locales"]
+postgresql_apt_py2_dependencies: ["python-psycopg2", "python-pycurl", "locales"]
+postgresql_apt_dependencies: "{{ postgresql_apt_py3_dependencies if 'python3' in ansible_python_interpreter|default('') else postgresql_apt_py2_dependencies }}"
