--- a/defaults/repmgr.yml
+++ b/defaults/repmgr.yml
@@ -23,10 +23,10 @@ repmgr_location: "default"
 repmgr_use_replication_slots: "no"
 repmgr_witness_sync_interval: 15
 repmgr_use_primary_conninfo_password: "false"
-repmgr_passfile: "/var/lib/postgresql/{{postgresql_version}}/.pgpass"
-repmgr_base_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh"
-repmgr_private_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh/id_rsa"
-repmgr_public_key_path: "/var/lib/postgresql/{{postgresql_version}}/.ssh/id_rsa.pub"
+repmgr_passfile: "/var/lib/postgresql/.pgpass"
+repmgr_base_key_path: "/var/lib/postgresql/.ssh"
+repmgr_private_key_path: "/var/lib/postgresql/.ssh/id_rsa"
+repmgr_public_key_path: "/var/lib/postgresql/.ssh/id_rsa.pub"
 repmgr_ssh_key_bits: "2048"
 repmgr_ssh_key_type: "rsa"
 
