--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,6 @@
     name: "{{ postgresql_service_name }}"
     state: restarted
     enabled: yes
+
+- name: restart cluster
+  shell: pg_ctlcluster {{postgresql_version}} {{postgresql_cluster_name}} restart
