--- a/vars.yml
+++ b/vars.yml
@@ -56,6 +56,7 @@ postgresql_users:
 postgresql_user_privileges:
   - name: admin
     db: testdb
+    role_attr_flags: "SUPERUSER"
   - name: "{{repmgr_user}}"
     db: "{{repmgr_database}}"
     priv: "ALL"
