Add symlink for shorter commandline repmgr

--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -7,6 +7,12 @@
     group: "{{ postgresql_service_group }}"
     mode: 0640
 
+- name: Repmgr | Create repmgr.conf symlink for shorter commands # see: https://repmgr.org/docs/4.0/configuration-file.html
+  file:
+    src: "{{postgresql_conf_directory}}/repmgr.conf"
+    dest: /etc/repmgr.conf 
+    state: link
+
 - name: Repmgr | Ensure systemd drop-in directory exists
   file:
     path: "/etc/systemd/system/repmgr{{postgresql_version}}.service.d/"
