--- a/vars.yml
+++ b/vars.yml
@@ -2,6 +2,7 @@
 # Basic settings
 postgresql_version: 11
 postgresql_cluster_name: main
+postgresql_cluster_reset: false # TODO: Needs to be tested for repmgr
 postgresql_port: 5432
 postgresql_encoding: "UTF-8"
 postgresql_locale: "fr_FR.UTF-8"
