--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -93,7 +93,7 @@
   when: not repmgr_primary
 
 - name: Repmgr | Clone standby
-  command: "repmgr -F {{repmgr_primary_hostname}} -U repmgr -d repmgr standby clone"
+  command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr standby clone"
   become: yes
   become_user: "{{ postgresql_service_user }}"
   when: not repmgr_primary
@@ -110,13 +110,13 @@
   delegate_to: localhost
 
 - name: Repmgr | Register standby
-  command: "repmgr -F {{repmgr_primary_hostname}} -U repmgr -d repmgr standby register"
+  command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr standby register"
   become: yes
   become_user: "{{ postgresql_service_user }}"
   when: not repmgr_primary
 
 - name: Repmgr | Verify cluster functionality
-  command: "repmgr -F {{repmgr_primary_hostname}} -U repmgr -d repmgr cluster crosscheck"
+  command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr cluster crosscheck"
   become: yes
   become_user: "{{ postgresql_service_user }}"
 
@@ -127,7 +127,7 @@
     enabled: yes
   when: repmgr_monitoring_history == "true" or repmgr_failover == "automatic"
 
-- name: Repmgr | Setup cluster monitoring history cleanup
+- name: Repmgr | Setup cluster monitoring history cleanup with cron task
   copy:
     content: "repmgr cluster cleanup --keep-history={{repmgr_keep_history_days}}"
     dest: "/etc/cron.daily/repmgr_cleanup"
