--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -80,29 +80,33 @@
   set_fact:
     repmgr_primary_hostname: "{% for host, vars in hostvars.items() if 'repmgr_primary' in vars and vars['repmgr_primary'] == True %}{{ host|trim }}{% endfor %}"
 
+# - name: Debug
+#   debug:
+#     var: ansible_hostname != repmgr_primary_hostname
+
 - name: Repmgr | Register as primary
   command: "repmgr primary register"
   become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: repmgr_primary
+  when: ansible_hostname == repmgr_primary_hostname
 
 - name: Repmgr | Ensure postgresql slave is stopped before clone
   service:
     name: "postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}"
     state: stopped
-  when: not repmgr_primary
+  when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Clone standby
   command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr standby clone"
   become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: not repmgr_primary
+  when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Ensure postgresql slave is running after clone
   service:
     name: "postgresql@{{postgresql_version}}@{{postgresql_cluster_name}}"
     state: started
-  when: not repmgr_primary
+  when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Wait for Postgres
   wait_for:
@@ -113,7 +117,7 @@
   command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr standby register"
   become: yes
   become_user: "{{ postgresql_service_user }}"
-  when: not repmgr_primary
+  when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Verify cluster functionality
   command: "repmgr -F -h {{repmgr_primary_hostname}} -U repmgr -d repmgr cluster crosscheck"
