--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -104,7 +104,7 @@
 
 - name: Repmgr | Ensure postgresql slave is running after clone
   service:
-    name: "postgresql@{{postgresql_version}}@{{postgresql_cluster_name}}"
+    name: "postgresql@{{postgresql_version}}-{{postgresql_cluster_name}}"
     state: started
   when: ansible_hostname != repmgr_primary_hostname
 
